apply styles market + distribution + profit view

--- a/core/templates/distribution.html
+++ b/core/templates/distribution.html
@@ -9,170 +9,179 @@
 <h1>Item Distribution</h1>
 <p>Item distribution based on quality/level/class/subclass</p>
 
-<div>
-  <canvas id="bar-chart-quality" width="800" height="450"></canvas>
+<div class="container">
+  <div class="row">
+    <div class="col-dist col-lg-6 col-md-12">
+      <div>
+        <canvas id="bar-chart-quality" width="800" height="450"></canvas>
+      </div>
+
+      <!-- ### Item qualities / Item quantities (views.py) ### -->
+      <!-- prettier-ignore -->
+      <script id="quantities-list" type="application/json">{{quantities|safe}}</script>
+
+      <!-- ### Item qualities distribution bar chart ### -->
+      <script>
+        qualities = JSON.parse(document.getElementById('quantities-list').textContent);
+
+        let item_quality = [];
+        let item_quality_quantity = [];
+        for (let i = 0; i < qualities.length; i++) {
+          if (qualities[i].quality !== 'UNKNOWN') {
+            item_quality.push(qualities[i].quality);
+            item_quality_quantity.push(qualities[i].total_quantity);
+          }
+        }
+
+        new Chart(document.getElementById('bar-chart-quality'), {
+          type: 'bar',
+          data: {
+            labels: item_quality,
+            datasets: [
+              {
+                label: 'Total Items per Quality',
+                backgroundColor: ['#3e95cd', '#8e5ea2', '#3cba9f', '#e8c3b9', '#c45850'],
+                data: item_quality_quantity,
+              },
+            ],
+          },
+          options: {
+            legend: { display: false },
+            title: {
+              display: true,
+            },
+          },
+        });
+      </script>
+    </div>
+    <div class="col-dist col-lg-6 col-md-12">
+      <div>
+        <canvas id="bar-chart-level" width="800" height="450"></canvas>
+      </div>
+
+      <!-- ### Item level / Item quantities (views.py) ### -->
+      <!-- prettier-ignore -->
+      <script id="level-list" type="application/json">{{level|safe}}</script>
+
+      <!-- ### Item level distribution pie chart ### -->
+      <script>
+        level = JSON.parse(document.getElementById('level-list').textContent);
+
+        let item_level = [];
+        let item_level_quantity = [];
+        for (let i = 1; i < level.length; i++) {
+          item_level.push(level[i].level);
+          item_level_quantity.push(level[i].total_quantity);
+        }
+
+        new Chart(document.getElementById('bar-chart-level'), {
+          type: 'bar',
+          data: {
+            labels: item_level,
+            datasets: [
+              {
+                label: 'Total Items per Level',
+                backgroundColor: ['#3e95cd', '#8e5ea2', '#3cba9f', '#e8c3b9', '#c45850'],
+                data: item_level_quantity,
+              },
+            ],
+          },
+          options: {
+            legend: { display: false },
+            title: {
+              display: true,
+            },
+          },
+        });
+      </script>
+    </div>
+    <div class="col-dist col-lg-6 col-md-12">
+      <div>
+        <canvas id="bar-chart-class" width="800" height="450"></canvas>
+      </div>
+
+      <!-- ### Item class / Item quantities (views.py) ### -->
+      <!-- prettier-ignore -->
+      <script id="class-list" type="application/json">{{class|safe}}</script>
+
+      <!-- ### Item class distribution bar chart ### -->
+      <script>
+        classes = JSON.parse(document.getElementById('class-list').textContent);
+
+        let item_class = [];
+        let item_class_quantity = [];
+        for (let i = 0; i < classes.length; i++) {
+          if (classes[i].item_class !== 'UNKNOWN') {
+            item_class.push(classes[i].item_class);
+            item_class_quantity.push(classes[i].total_quantity);
+          }
+        }
+
+        new Chart(document.getElementById('bar-chart-class'), {
+          type: 'bar',
+          data: {
+            labels: item_class,
+            datasets: [
+              {
+                label: 'Total Items per Class',
+                backgroundColor: ['#3e95cd', '#8e5ea2', '#3cba9f', '#e8c3b9', '#c45850'],
+                data: item_class_quantity,
+              },
+            ],
+          },
+          options: {
+            legend: { display: false },
+            title: {
+              display: true,
+            },
+          },
+        });
+      </script>
+    </div>
+    <div class="col-dist col-lg-6 col-md-12">
+      <div>
+        <canvas id="bar-chart-subclass" width="800" height="450"></canvas>
+      </div>
+
+      <!-- ### Item subclass / Item quantities (views.py) ### -->
+      <!-- prettier-ignore -->
+      <script id="subclass-list" type="application/json">{{subclass|safe}}</script>
+
+      <!-- ### Item subclass distribution bar chart ### -->
+      <script>
+        subclasses = JSON.parse(document.getElementById('subclass-list').textContent);
+
+        let item_subclass = [];
+        let item_subclass_quantity = [];
+        for (let i = 0; i < subclasses.length; i++) {
+          if (subclasses[i].item_subclass !== 'UNKNOWN') {
+            item_subclass.push(subclasses[i].item_subclass);
+            item_subclass_quantity.push(subclasses[i].total_quantity);
+          }
+        }
+
+        new Chart(document.getElementById('bar-chart-subclass'), {
+          type: 'bar',
+          data: {
+            labels: item_subclass,
+            datasets: [
+              {
+                label: 'Total Items per Sub-class',
+                backgroundColor: ['#3e95cd', '#8e5ea2', '#3cba9f', '#e8c3b9', '#c45850'],
+                data: item_subclass_quantity,
+              },
+            ],
+          },
+          options: {
+            legend: { display: false },
+            title: {
+              display: true,
+            },
+          },
+        });
+      </script>
+    </div>
+  </div>
 </div>
-
-<!-- ### Item qualities / Item quantities (views.py) ### -->
-<!-- prettier-ignore -->
-<script id="quantities-list" type="application/json">{{quantities|safe}}</script>
-
-<!-- ### Item qualities distribution bar chart ### -->
-<script>
-  qualities = JSON.parse(document.getElementById('quantities-list').textContent);
-
-  let item_quality = [];
-  let item_quality_quantity = [];
-  for (let i = 0; i < qualities.length; i++) {
-    if (qualities[i].quality !== 'UNKNOWN') {
-      item_quality.push(qualities[i].quality);
-      item_quality_quantity.push(qualities[i].total_quantity);
-    }
-  }
-
-  new Chart(document.getElementById('bar-chart-quality'), {
-    type: 'bar',
-    data: {
-      labels: item_quality,
-      datasets: [
-        {
-          label: 'Total Items per Quality',
-          backgroundColor: ['#3e95cd', '#8e5ea2', '#3cba9f', '#e8c3b9', '#c45850'],
-          data: item_quality_quantity,
-        },
-      ],
-    },
-    options: {
-      legend: { display: false },
-      title: {
-        display: true,
-      },
-    },
-  });
-</script>
-
-<div>
-  <canvas id="bar-chart-level" width="800" height="450"></canvas>
-</div>
-
-<!-- ### Item level / Item quantities (views.py) ### -->
-<!-- prettier-ignore -->
-<script id="level-list" type="application/json">{{level|safe}}</script>
-
-<!-- ### Item level distribution pie chart ### -->
-<script>
-  level = JSON.parse(document.getElementById('level-list').textContent);
-
-  let item_level = [];
-  let item_level_quantity = [];
-  for (let i = 1; i < level.length; i++) {
-    item_level.push(level[i].level);
-    item_level_quantity.push(level[i].total_quantity);
-  }
-
-  new Chart(document.getElementById('bar-chart-level'), {
-    type: 'bar',
-    data: {
-      labels: item_level,
-      datasets: [
-        {
-          label: 'Total Items per Level',
-          backgroundColor: ['#3e95cd', '#8e5ea2', '#3cba9f', '#e8c3b9', '#c45850'],
-          data: item_level_quantity,
-        },
-      ],
-    },
-    options: {
-      legend: { display: false },
-      title: {
-        display: true,
-      },
-    },
-  });
-</script>
-
-<div>
-  <canvas id="bar-chart-class" width="800" height="450"></canvas>
-</div>
-
-<!-- ### Item class / Item quantities (views.py) ### -->
-<!-- prettier-ignore -->
-<script id="class-list" type="application/json">{{class|safe}}</script>
-
-<!-- ### Item class distribution bar chart ### -->
-<script>
-  classes = JSON.parse(document.getElementById('class-list').textContent);
-
-  let item_class = [];
-  let item_class_quantity = [];
-  for (let i = 0; i < classes.length; i++) {
-    if (classes[i].item_class !== 'UNKNOWN') {
-      item_class.push(classes[i].item_class);
-      item_class_quantity.push(classes[i].total_quantity);
-    }
-  }
-
-  new Chart(document.getElementById('bar-chart-class'), {
-    type: 'bar',
-    data: {
-      labels: item_class,
-      datasets: [
-        {
-          label: 'Total Items per Class',
-          backgroundColor: ['#3e95cd', '#8e5ea2', '#3cba9f', '#e8c3b9', '#c45850'],
-          data: item_class_quantity,
-        },
-      ],
-    },
-    options: {
-      legend: { display: false },
-      title: {
-        display: true,
-      },
-    },
-  });
-</script>
-
-<div>
-  <canvas id="bar-chart-subclass" width="800" height="450"></canvas>
-</div>
-
-<!-- ### Item subclass / Item quantities (views.py) ### -->
-<!-- prettier-ignore -->
-<script id="subclass-list" type="application/json">{{subclass|safe}}</script>
-
-<!-- ### Item subclass distribution bar chart ### -->
-<script>
-  subclasses = JSON.parse(document.getElementById('subclass-list').textContent);
-
-  let item_subclass = [];
-  let item_subclass_quantity = [];
-  for (let i = 0; i < subclasses.length; i++) {
-    if (subclasses[i].item_subclass !== 'UNKNOWN') {
-      item_subclass.push(subclasses[i].item_subclass);
-      item_subclass_quantity.push(subclasses[i].total_quantity);
-    }
-  }
-
-  new Chart(document.getElementById('bar-chart-subclass'), {
-    type: 'bar',
-    data: {
-      labels: item_subclass,
-      datasets: [
-        {
-          label: 'Total Items per Sub-class',
-          backgroundColor: ['#3e95cd', '#8e5ea2', '#3cba9f', '#e8c3b9', '#c45850'],
-          data: item_subclass_quantity,
-        },
-      ],
-    },
-    options: {
-      legend: { display: false },
-      title: {
-        display: true,
-      },
-    },
-  });
-</script>
 
 {% endblock %}
