--- a/static/styles/css/styles.css
+++ b/static/styles/css/styles.css
@@ -1,5 +1,7 @@
 /* ### Include ### */
 @import 'home.css';
+@import 'distribution.css';
+@import 'profit.css';
 /* ### General styles ### */
 * {
   box-sizing: border-box;
