apply styles item details + data status

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -28,16 +28,16 @@
             <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/market">Market</a>
+            <a class="nav-link" href="{% url 'market' %}">Market</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/distribution">Distribution</a>
+            <a class="nav-link" href="{% url 'distribution' %}">Distribution</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/profit">Profit</a>
+            <a class="nav-link" href="{% url 'profit' %}">Profit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/data">Data</a>
+            <a class="nav-link" href="{% url 'data' %}">Data</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/admin">Login</a>
