--- a/core/templates/distribution.html
+++ b/core/templates/distribution.html
@@ -7,7 +7,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <h1>Item Distribution</h1>
-<p>Item distribution based on quality/level/class/subclass</p>
+<p>Item Distribution based on Quality/Level/Class/Subclass</p>
 
 <div class="container">
   <div class="row">
