--- a/static/styles/profit.scss
+++ b/static/styles/profit.scss
@@ -21,9 +21,7 @@
     width: 100%;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
-    border-left: 3px solid black;
-    border-right: 3px solid black;
-    border-bottom: 3px solid black;
+    border: 3px solid black;
     margin-bottom: 1.2rem;
   }
 
