--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,4 +1,7 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %}
+<!-- prettier-ignore -->
+{% extends "base.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
 
 <h1>World of Warcraft Commodities Analysis 📊</h1>
 
