--- a/static/styles/css/styles.css
+++ b/static/styles/css/styles.css
@@ -2,6 +2,8 @@
 @import 'home.css';
 @import 'distribution.css';
 @import 'profit.css';
+@import 'details.css';
+@import 'data.css';
 /* ### General styles ### */
 * {
   box-sizing: border-box;
@@ -50,7 +52,7 @@ body {
   transform: translateX(-50%);
   background-color: rgba(0, 0, 0, 0.8156862745);
   border-radius: 0.3rem;
-  overflow-y: auto; /* add vertical scrolling to the parent container */
+  overflow-y: auto;
   border-top: 2.5rem solid rgba(0, 0, 255, 0);
   border-bottom: 2.5rem solid rgba(0, 0, 255, 0);
 }
