--- a/static/styles/css/styles.css
+++ b/static/styles/css/styles.css
@@ -28,7 +28,6 @@ body {
   background-size: cover;
   background-attachment: fixed;
   color: white;
-  height: 100vh;
 }
 
 /* ### Navbar styles ### */
@@ -44,6 +43,10 @@ body {
   color: white;
 }
 
+.navbar a:hover {
+  color: grey;
+}
+
 /* ### Content styles ### */
 .content-container {
   position: fixed;
@@ -54,12 +57,11 @@ body {
   border-radius: 0.3rem;
   overflow-y: auto;
   border-top: 2.5rem solid rgba(0, 0, 255, 0);
-  border-bottom: 2.5rem solid rgba(0, 0, 255, 0);
+  bottom: 0;
 }
 
 .content {
-  padding: 0 2rem;
-  height: calc(100vh - 15rem);
+  padding: 0 2rem 3rem;
 }
 
 .content-container::-webkit-scrollbar {
