create analysis explanation view

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -28,6 +28,9 @@
             <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'analysis' %}">Analysis</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'market' %}">Market</a>
           </li>
           <li class="nav-item">
@@ -39,9 +42,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'data' %}">Data</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="/admin">Login</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </nav>
