add images: data cleaning commodities

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -27,9 +27,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="/">Home</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="{% url 'analysis' %}">Analysis</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="{% url 'market' %}">Market</a>
           </li>
